Return car offer info when creating offer
